using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

class AnimationStrings
{
    internal static string isRunning = "isRunning";
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string atk = "atk";
    internal static string magicAttack = "magicAttack";
    internal static string canMove = "canMove";
    internal static string haveTarget = "haveTarget";
    internal static string isAlive = "IsAlive";
    internal static string isHit = "isHit";
    internal static string LockControl = "LockControl";
}
